--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
